--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Forecast cards -->
             <div class="container">
               <div class="content">
-                <h2>5-Day Forecast:</h2>
+                <h2>Forecast:</h2>
                 <div class="columns">
                   <div class="column card">
                     <div id="day1" class="card-content">
